--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -4,10 +4,12 @@
     <shared-card
       *ngFor="let item of list"
       class="home-list-item"
+      [id]="item.id"
       [title]="item.title"
       [description]="item.description"
       [type]="item.type"
       [img]="item.img"
+      (deleteCall)="deleteCall($event)"
     ></shared-card>
   </div>
 </div>
