--- a/src/app/modules/shared/components/shared-card/shared-card.component.scss
+++ b/src/app/modules/shared/components/shared-card/shared-card.component.scss
@@ -11,24 +11,30 @@
   &:hover {
     scale: 1.05;
   }
-
+  
   &-close {
-    right: -5px;
-    top: -5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    right: -7px;
+    top: -7px;
     position: absolute;
     height: 18px;
     width: 18px;
     background-color: white;
     border-radius: 50%;
     border: 1px solid #ccc;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
     cursor: pointer;
+    padding: 2px;
 
     &:hover {
       border: 1px solid #666;
-      transform: rotate(-90deg);
-      svg {
-        fill: red;
+      transform: rotate(-90deg) scale(1.1);
+      img {
+        filter: invert(33%) sepia(100%) saturate(6230%) hue-rotate(331deg)
+          brightness(101%) contrast(101%);
+          transform: scale(1.1);
       }
     }
   }
