created search (filter) component

--- a/src/app/modules/shared/components/shared-search-field/shared-search-field.component.html
+++ b/src/app/modules/shared/components/shared-search-field/shared-search-field.component.html
@@ -1,1 +1,1 @@
-<input #searchTerm type="text" (keyup)="callSearch(searchTerm.value)" />
+<input #searchTerm type="text" (keyup)="search(searchTerm.value)" />
