--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,8 +1,10 @@
 <div class="home">
-  <shared-search-field></shared-search-field>
+  <shared-search-field
+    (callSearch)="setSearch($event)"
+  ></shared-search-field>
   <div class="home-list">
     <shared-card
-      *ngFor="let item of list"
+      *ngFor="let item of filteredList"
       class="home-list-item"
       [id]="item.id"
       [title]="item.title"
