--- a/src/app/modules/shared/components/shared-card/shared-card.component.scss
+++ b/src/app/modules/shared/components/shared-card/shared-card.component.scss
@@ -2,7 +2,7 @@
   border-radius: 5px;
   background-color: white;
   width: 160px;
-  height: 240px;
+  height: 230px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
   position: relative;
   transition: all 0.3s ease-in-out;
@@ -57,15 +57,19 @@
     justify-content: flex-end;
     padding: 2px;
   }
+
   &-content {
     padding: 5px;
+
     &-title {
       margin: 0;
+      font-weight: lighter;
     }
+
     &-description {
-      margin: 0;
+      margin: 3px;
       font-size: 0.7rem;
-      max-height: 120px;
+      max-height: 100px;
       overflow: hidden;
       text-overflow: ellipsis;
       display: block;
@@ -75,6 +79,7 @@
       -webkit-line-clamp: 8;
       -webkit-box-orient: vertical;
       -moz-line-clamp: 8;
+      line-height: 100%;
     }
   }
 }
